<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Blindroid</string>
    <string name="menu_settings">Settings</string>
    <string name="sos_button">SOS</string>
    <string name="time_button">Time</string>
    <string name="where_am_i_button">Where am i</string>
    <string name="phone_status_button">Phone status</string>
    <string name="signal_button">Signal</string>
    <string name="alarm_clock_button">Alarm clock</string>
    <string name="quick_dial_button">Quick dial</string>
    <string name="quick_sms_button">Quick SMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sos">SOSActivity</string>
    
    <string name="title_activity_quick_dial">QuickDialActivity</string>
    <string name="Contact_number_1">Contact number 1</string>
    <string name="Contact_number_2">Contact number 2</string>
    <string name="Contact_number_3">Contact number 3</string>
    <string name="Contact_number_4">Contact number 4</string>
    <string name="Contact_number_5">Contact number 5</string>
    <string name="Contact_number_6">Contact number 6</string>
    <string name="Contact_number_7">Contact number 7</string>
    <string name="Contact_number_8">Contact number 8</string>
    <string name="Contact_number_9">Contact number 9</string>
    
     <string name="phoneStatus_button_getBatteryStatus">Battery Level</string>
    <string name="phoneStatus_button_getBatteryStatus_read">Battery</string>
    <string name="phoneStatus_button_getReceptionStatus">Reception Status</string>
    <string name="phoneStatus_button_getReceptionStatus_read">Reception</string>
    <string name="phoneStatus_wai_Main">Phone Status</string>
    <string name="phoneStatus_help_Main">Press Battery for battery status. Press Reception for reception status.</string>
    <string name="status_charging">Charging</string>
    <string name="title_activity_phone_status">PhoneStatusActivity</string>
    
    <string name="ClockTitle">Speaking clock</string>
     <string name="emptyHour">hh:mm:ss</string>
     <string name="back_button">Back</string>
     <string name="next_button">Next</string>
     <string name="settings_button">Settings</string>
     <string name="WhiteBlack">White &amp; Black</string>
     <string name="WhiteRed">White &amp; Red</string>
     <string name="RedBlack">Red &amp; Black</string>
     <string name="GreenBlack">Green &amp; Black</string>
     <string name="WhiteGreen">White &amp; Green</string>
     <string name="BlueBlack">Blue &amp; Black</string>
     <string name="WhiteBlue">White &amp; Blue</string>
     <string name="title_activity_color_settings">Color Settings</string>


</resources>