<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ColorSettingsActivity"
    android:layout_width="fill_parent"
    android:layout_height="444dip"    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/WhiteBlack"
            android:layout_width="0dip"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="@color/BLACK"
            android:text="@string/WhiteBlack"
            android:textColor="@color/WHITE"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/WhiteRed"
            android:layout_width="0dip"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="@color/RED"
            android:text="@string/WhiteRed"
            android:textColor="@color/WHITE"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/RedBlack"
            android:layout_width="0dip"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="@color/BLACK"
            android:text="@string/RedBlack"
            android:textColor="@color/RED"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/WhiteGreen"
            android:layout_width="0dip"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="@color/GREEN"
            android:text="@string/WhiteGreen"
            android:textColor="@color/WHITE"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/GreenBlack"
            android:layout_width="0dip"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="@color/BLACK"
            android:text="@string/GreenBlack"
            android:textColor="@color/GREEN"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/WhiteBlue"
            android:layout_width="0dip"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="@color/BLUE"
            android:text="@string/WhiteBlue"
            android:textColor="@color/WHITE"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/BlueBlack"
            android:layout_width="0dip"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:background="@color/BLACK"
            android:text="@string/BlueBlack"
            android:textColor="@color/BLUE"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>

</LinearLayout>