<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/QuickDialActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="?backgroundColor" >

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_1"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_1"
            style="?textAppearance"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_2"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_2"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_3"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_3"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_4"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_4"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_5"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_5"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_6"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_6"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_7"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_7"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_8"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_8"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.yp2012g4.blindroid.customUI.TalkingButton
            android:id="@+id/Contact_number_9"
            android:layout_width="0dip"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:text="@string/Contact_number_9"
            style="?textAppearance" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/control_bar_view" />
    </LinearLayout>

</LinearLayout>